@@ -377,7 +377,7 @@ project(":core"){
 
         implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.68'
         implementation group: 'com.beust', name: 'klaxon', version: '5.4'  // Yes, I'm aware arc has a json system, but I don't know how to use it.
-        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+//        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3' not used anywhere, leave commented to reduce jar size
 
         annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
         compileOnly project(":annotations")
